--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "focus-trap-react": "^6.0.0",
     "he": "^1.2.0",
     "react": "^16.13.1",
+    "react-aria-modal": "^4.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "rxjs": "^6.5.4",
     "styled-components": "^5.0.1",
     "typography": "^0.16.19",
     "uniqid": "^5.2.0"
