--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-aria-modal": "^4.0.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "rxjs": "^6.5.4",
